# dynamicMSA

./: .gitignore  README.md  __init__.py  align.py  main.py  pyproject.toml  setup.py
core/: guide_tree.py  needleman_wunsch.py  progressive.py
dynamicMSA/: align.py
dynamicMSA/core/: distance.py  guide_tree.py  needleman_wunsch.py  progressive.py
utils/: scoring.py
visualization/: alignment_viz.py  dp_matrix.py  guide_tree_viz.py
