[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dynamicMSA"
version = "0.1.0"
authors = [
  { name="onuraydi", email="onuraydi1934@gmail.com" }
]
description = "Dynamic Programming-based Multiple Array Alignment (MSA) library"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.21.0",
  "matplotlib>=3.5.0",
  "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/onuraydi/dynamicMSA"